# ncx-infra-controller-core

./: Cargo.toml
book/src/: SUMMARY.md
book/src/architecture/: dpu_configuration.md
book/src/design/machine-identity/: spiffe-svid-sdd.md
book/src/manuals/metrics/: core_metrics.md
crates/api/: Cargo.toml
crates/api-db/migrations/: 20260225120000_tenant_identity_config.sql
crates/api-db/src/: lib.rs  tenant.rs  tenant_identity_config.rs
crates/api-integration-tests/tests/: lib.rs
crates/api-model/: Cargo.toml
crates/api-model/src/tenant/: mod.rs
crates/api-test-helper/src/: api_server.rs  instance.rs
crates/api/src/: api.rs  errors.rs  ethernet_virtualization.rs  scout_stream.rs  storage.rs
crates/api/src/auth/: internal_rbac_rules.rs
crates/api/src/cfg/: file.rs
crates/api/src/handlers/: api.rs  attestation.rs  bmc_endpoint_explorer.rs  compute_allocation.rs  credential.rs  dns.rs  dpa.rs  dpf.rs  dpu.rs  expected_machine.rs  expected_power_shelf.rs  expected_switch.rs  extension_service.rs  finder.rs  ib_partition.rs  identity_config.rs  instance.rs  instance_type.rs  machine.rs  machine_discovery.rs  machine_identity.rs  machine_interface.rs  machine_validation.rs  managed_host.rs  measured_boot.rs  mlx_admin.rs  mod.rs  network_security_group.rs  power_options.rs  power_shelf.rs  pxe.rs  rack.rs  rack_firmware.rs  resource_pool.rs  route_server.rs  scout_stream.rs  site_explorer.rs  switch.rs  uefi.rs
crates/api/src/measured_boot/rpc/: bundle.rs  journal.rs  machine.rs  profile.rs  report.rs  site.rs
crates/api/src/tests/: expected_power_shelf.rs  expected_switch.rs
crates/api/src/tests/common/api_fixtures/: mod.rs
crates/bmc-explorer/: Cargo.toml
crates/bmc-explorer/src/: chassis.rs  computer_system.rs
crates/health/benches/: sink_pipeline.rs
crates/health/example/: config.example.toml
crates/health/src/: config.rs
crates/health/src/processor/: health_report.rs  leak_events.rs
crates/health/src/sink/: events.rs  health_override.rs
crates/rpc/: build.rs
crates/rpc/proto/: forge.proto
helm/charts/carbide-api/templates/: _helpers.tpl
helm/charts/carbide-dhcp/templates/: _helpers.tpl
helm/charts/carbide-dns/templates/: _helpers.tpl
helm/charts/carbide-dsx-exchange-consumer/templates/: _helpers.tpl
helm/charts/carbide-hardware-health/templates/: _helpers.tpl
helm/charts/carbide-pxe/templates/: _helpers.tpl
helm/charts/carbide-ssh-console-rs/templates/: _helpers.tpl
pxe/mkosi.profiles/scout-loader-aarch64/mkosi.extra/etc/modprobe.d/: disable-mods.conf
pxe/templates/: bmc_fw_update
