#
# SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
[package]
name = "bmc-explorer"
version = "0.1.0"
description = "Explorer of BMC of different vendors"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
# [local-dependencies]
# DO NOT PUT DEPENDENCIES OTHER THAN LOCAL DEPS HERE, THEY SHOULD ALL HAVE 'path =' IN THEM.
bmc-vendor = { path = "../bmc-vendor" }
carbide-network = { path = "../network", default-features = false }
carbide-api-model = { path = "../api-model", default-features = false }
# DO NOT PUT DEPENDENCIES OTHER THAN LOCAL DEPS HERE, THEY SHOULD ALL HAVE 'path =' IN THEM.

itertools = { workspace = true }
mac_address = { workspace = true }
nv-redfish = { workspace = true, features = [
    "std-redfish",
    "oem-nvidia-bluefield",
    "oem-nvidia-baseboard",
    "oem-dell-attributes",
    "oem-lenovo",
    "oem-supermicro",
    "oem-hpe",
    "oem-ami",
    "oem-liteon",
    "bmc-http"
] }
regex = { workspace = true }
lazy_static = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
axum = { workspace = true }
bmc-mock = { path = "../bmc-mock" }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true
